Index participants by unique_id

--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -2,6 +2,6 @@ Index of Participants
 
 <ul>
 	<% @participants.each do |p| %>
-	<li><a href=/participants/<%= p.id %>><%= p.unique_id %></a></li>
+	<li><a href=/participants/<%= p.unique_id %>><%= p.unique_id %></a></li>
 	<% end %>
 </ul>
