--- a/app/views/static/dashboard.html.erb
+++ b/app/views/static/dashboard.html.erb
@@ -1,11 +1,13 @@
-Dashboard view
-<%= link_to('Go to index', root_path) %>
 
-<table>
-	<% @participants.each do |p| %>
-		<tr>
-			<td><a href=/participants/<%= p.unique_id %>><%= p.unique_id %></a></td>
-		</tr>
-	<% end %>
-
-</table>
+<section>
+  	<div class="wrap">
+		<h2>All Participants</h2>
+		<ul class="work">
+			<% @participants.each do |p| %>
+				<li>
+					<a href=/participants/<%= p.unique_id %> rel="external"><%= p.unique_id %></a>
+				</li>
+			<% end %>
+		</ul>
+	</div>
+</section>
